# assesment2_aristian

./: README.md
assesment2_aristian/: README.md  main.py  ocr_response.md  pyproject.toml
assesment2_aristian/modules/asses2/: main.py  utils.py
assesment2_aristian/modules/asses2/tools/: game_recommendation.py  gamedetail_info.py  ocr.py
